--- a/Style/home.css
+++ b/Style/home.css
@@ -6,10 +6,11 @@ body{
     background: skyblue;
 }
 nav{
-    background: darkblue;
-    color: white;
+    background: skyblue;
+    color: black;
     height: 100px;
     width: 100%;
+    font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,11 +24,11 @@ ul li{
     font-size: 17px;
 }
 ul li a{
-    color: white;
+    color: black;
     text-decoration: none;  
 }
 ul li a:hover{
-    color: lightgrey;
+    color: darkred;
     font-size: 18px;
     cursor: pointer;
 }
@@ -58,6 +59,7 @@ ul li a:hover{
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    margin-bottom: 0px;
 }
 .main_write button{
     border: 2px solid palevioletred;
@@ -78,4 +80,63 @@ ul li a:hover{
 .main_write button a:hover{
     color: palevioletred;
     text-decoration: none;
+}
+#box{
+    display: flex;
+    justify-content: center;
+    padding: 60px 20px;
+    background: black;
+    color: white;
+    position: absolute;
+}
+#box .one {
+    width:20%;
+    padding: 20px;
+    border: 2px groove white;
+    border-radius: 15px 21px;
+    box-shadow: 7px 6px 5px darkred;
+    text-align: center;
+    transition: .5s;
+}
+#box .two{
+    width: 20%;
+    padding: 20px;
+    border: 2px groove white;
+    border-radius: 15px 21px;
+    box-shadow: 7px 6px 5px darkred;
+    text-align: center;
+    transition: .5s;
+}
+#box .one h3{
+    text-align: center;
+}
+#box .two h3{
+    text-align: center;
+}
+#box button{
+    background: red;
+    color: lightgrey;
+    padding: 5px 12px;
+    margin: 5px;
+
+}
+#box button:hover{
+    background: white;
+    color: red;
+    margin: 5px;
+    font-weight: bold;
+    transition: .71s;
+}
+#box .one:hover{
+    transform: translateY(-30px);
+    transition: .5s;
+}
+#box .two:hover{
+    transform: translateY(-30px);
+    transition: .5s;
+}
+#ta{
+    background: white;
+    color: black;
+    width: 100px;
 }
